# alive2

./: .clang-format  .gitattributes  .gitignore  .travis.yml  ARM-TODO.md  AUTHORS  BugList.md  CMakeLists.txt  Dockerfile  LICENSE  README.md  TODO.md  alive-mutateBugList.md  build_llvm_with_gcc.patch
.github/scripts/: build.sh
.github/workflows/: build.yml  codeql-analysis.yml  codeql.yml
backend_tv/: adjust_src.cpp  backend_tv.h  lifter.cpp  lifter.h  mc.cpp  mc.h  print_regs.cpp  run_backend.cpp
cache/: cache.cpp  cache.h
cmake/: FindZ3.cmake  Findhiredis.cmake
ir/: attrs.cpp  attrs.h  constant.cpp  constant.h  fast_math.cpp  fast_math.h  function.cpp  function.h  functions.cpp  functions.h  globals.cpp  globals.h  init.cpp  init.h  instr.cpp  instr.h  intrinsics_binop.h  memory.cpp  memory.h  pointer.cpp  pointer.h  precondition.cpp  precondition.h  state.cpp  state.h  state_value.cpp  state_value.h  type.cpp  type.h  value.cpp  value.h  x86_intrinsics.cpp  x86_intrinsics.h  x86_intrinsics_binop.inc  x86_intrinsics_quadop.inc  x86_intrinsics_terop.inc
llvm_util/: LLVMOptimizer.cpp  LLVMOptimizer.h  cache.cpp  cache.h  cmd_args_def.h  cmd_args_list.h  compare.cpp  compare.h  crc.cpp  function_verify.cpp  function_verify.h  known_fns.cpp  known_fns.h  llvm2alive.cpp  llvm2alive.h  llvm_optimizer.cpp  llvm_optimizer.h  utils.cpp  utils.h
scripts/: alivecc.in  benchmark-clang-tv.in  benchmark-llvm-test-suite.in  benchmark_clang_tv.in  debug-z3-rc.php  filter-bench.php  fix_report_files.in  gen-dashboard.php  gen-mem-tests.pl  opt-alive.sh  opt-alive.sh.in  pick-random-bench.php  reduce-interesting-to-html.in  reduce-interesting.in  repro.in  rewritepass.py  run.php  runall.sh  stats.php  table.php
scripts/perf-testing/: README.md  test.pl
scripts/perf-testing/negative/: add-to-shift1.ll  add-to-shift2.ll  ctpop1.ll  ctpop2.ll  ctpop3.ll  demorgan1.ll  demorgan2.ll  memcpy1.ll  memcpy2.ll  memcpy3.ll  memcpy4.ll  memcpy5.ll  memcpy6.ll  sdiv1.ll  udiv1.ll
scripts/perf-testing/positive/: add-to-shift1.ll  add-to-shift2.ll  ctpop1.ll  ctpop2.ll  ctpop3.ll  demorgan1.ll  demorgan2.ll  memcpy1.ll  memcpy2.ll  memcpy3.ll  memcpy4.ll  memcpy5.ll  memcpy6.ll  sdiv1.ll  udiv1.ll
scripts/test-llvm-backends/: maskret.pl  run-test.sh  unused-arg-elimination.pl
smt/: ctx.cpp  ctx.h  expr.cpp  expr.h  exprs.cpp  exprs.h  smt.cpp  smt.h  solver.cpp  solver.h
tests/: README.md  lit.cfg.py
tests/alive-tv/: abs.v0.srctgt.ll  abs.v1.srctgt.ll  abs.v2.srctgt.ll  abs.v3.srctgt.ll  allockind_without_allocsize.srctgt.ll  bigint.srctgt.ll  br-undef.srctgt.ll  br-undef2.srctgt.ll  br-undef3.srctgt.ll  call-fail.src.ll  call-fail.tgt.ll  call-movestr.tgt.ll  call-movestr2.src.ll  call-strfwd.src.ll  call-strfwd.tgt.ll  call.src.ll  call.tgt.ll  callees.srctgt.ll  cast.src.ll  cast.tgt.ll  dbg.tgt.ll  disjoint.srctgt.ll  easy-1.srctgt.ll  easy-2.ident.ll  easy-3.srctgt.ll  emptyaggr-load.srctgt.ll  emptyaggr-store.srctgt.ll  emptyaggr-store2.srctgt.ll  emptyaggr.srctgt.ll  extractvalue-padding.srctgt.ll  fabs-fmf.srctgt.ll  fabs-libcall.srctgt.ll  fabs.srctgt.ll  failcheck.src.ll  failcheck.tgt.ll  ffs-2.srctgt.ll  ffs-3.srctgt.ll  ffs-4.srctgt.ll  ffs.srctgt.ll  ffsl.srctgt.ll  (+138 more)
tests/alive-tv/asm/: alloca.srctgt.ll  arg-attr-nonnull.srctgt.ll  arg-attrs.srctgt.ll  cmp-null.srctgt.ll  const-delete.src.ll  const-delete.tgt.ll  delete-store.srctgt.ll  gep_arg.srctgt.ll  gep_mem.srctgt.ll  infer-align.srctgt.ll  infer-alignment.srctgt.ll  large-ptrmask.srctgt.ll  load-ptr2int-be.srctgt.ll  load-ptr2int.srctgt.ll  load-ptr2int2.srctgt.ll  (+24 more)
tests/arm-tv/: add.c  add.ll  bicsx.ll  branch.ll  convert-to-lit.sh  foo.c  movk_1.ll  rbit_clz.srctgt.ll  rev.srctgt.ll  simple_add.c  umull_1.ll  usub.ll
tests/clang-tv/: batch.c  batched.c  elapsed-time.c  interprocedural.cpp  issue569.cpp  issue579.c  parallel-alias-stats.c  quiet.c  skip-globalopt.c
tests/memcpy/: 1-src.ll  2-src.ll  3-src.ll  4-src.ll
tests/opt-tv/: legacypm.opt.ll  noglobalopt-legacypm.opt.ll  noglobalopt.opt.ll  npm-Os.opt.ll  npm-globalopt.opt.ll  npm-lu.opt.ll  npm-lu2.opt.ll  npm-verify.opt.ll  npm2.opt.ll  npm3.opt.ll  printf.opt.ll  simple.opt.ll  test.opt.ll
tests/unit/: add-error.opt  bitreverse.opt  bswap.opt  call-error.opt  call-error2.opt  call-error3.opt  call-error4.opt  call-error5.opt  call-error6.opt  call-error7.opt  call-error8.opt  call-root.opt  call.opt  copy.opt  ctlz.opt  ctpop.opt  cttz.opt  fabs.opt  ffs.opt  fp-casts.opt  fpbitcast.opt  fpbitcast2.opt  fpbitcast3.opt  free_double_fail.opt  freeze-undef.opt  freeze.opt  lhs-intermediate-variable.opt  malloc_free.opt  overflow.opt  poison-error.opt  pre.opt  rhs-intermediate-variable.opt  saturating.opt  shl.opt  undef-error.opt  undef.opt  uscmp.opt  valuewise.opt
tools/: LLVMOptimizer.cpp  LLVMOptimizer.h  PassRegistry.def  alive-exec.cpp  alive-jobserver.cpp  alive-mutate.cpp  alive-tv.cpp  alive.cpp  alive_lexer.h  alive_lexer.re  alive_parser.cpp  alive_parser.h  backend-tv.cpp  debug.cpp  quick-fuzz.cpp  tokens.h  transform.cpp  transform.h
tools/mutator-utils/: ComplexMutator.cpp  ComplexMutator.h  ComplexMutatorHelper.cpp  ComplexMutatorHelper.h  InlineFunction.cpp  SingleLineMutator.cpp  SingleLineMutator.h  attributes.cpp  attributes.h  instructions.cpp  instructions.h  llvmStress.h  mutator.cpp  mutator.h  mutator_helper.cpp  mutator_helper.h  parser.cpp  parser.h  simpleMutator.cpp  simpleMutator.h  singleLine.cpp  singleLine.h  util.cpp  util.h
tv/: CMakeLists.txt  llvm-utils.cpp  llvm-utils.h  tv.cpp  tv.h  utils.cpp  utils.h
tv/batchutil/: CMakeLists.txt  batchopts.cpp
util/: compiler.cpp  compiler.h  config.cpp  config.h  crc.h  dataflow.h  errors.cpp  errors.h  file.cpp  file.h  hash.h  parallel.cpp  parallel.h  parallel_fifo.cpp  parallel_jobserver.cpp  parallel_null.cpp  parallel_posix.cpp  parallel_unrestricted.cpp  random.cpp  random.h  sort.cpp  sort.h  spaceship.h  stopwatch.cpp  stopwatch.h  symexec.cpp  symexec.h  unionfind.cpp  unionfind.h  version.cpp  version.h
web/: include.php  index.php
(+13418 files in other folders)
